# template-python-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml  requirements.txt  ruff.toml
tests/: test_template.py
