[tool.poetry]
name = "project-name"
version = "0.1.0"
description = ""
authors = ["Levi Alexander <alexander.hahahahaha@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"
ipykernel = "^6.29.5"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
fixable = ["ALL"]
unfixable = ["F401"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "auto"