[project]
name = "template-python-project"
authors = ["Levi Alexander <alexander.hahahahaha@gmail.com>"]
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
]

[tool.uv]
dev-dependencies = [
    "icecream>=2.1.3",
]

[tool.ruff]
target-version = "py313"
line-length = 200
indent-width = 4

[tool.ruff.lint]
select = [
  "F",      # Pyflakes
  "W6",
  "E71",
  "E72",
  "E112",   # no-indented-block
  "E113",   # unexpected-indentation
  "E203",   # whitespace-before-punctuation
  "E272",   # multiple-spaces-before-keyword
  "E303",   # too-many-blank-lines
  "E304",   # blank-line-after-decorator
  "E501",   # line-too-long
  "E702",   # multiple-statements-on-one-line-semicolon
  "E703",   # useless-semicolon
  "E731",   # lambda-assignment
  "W191",   # tab-indentation
  "W291",   # trailing-whitespace
  "W293",   # blank-line-with-whitespace
  "UP039",  # unnecessary-class-parentheses
  "C416",   # unnecessary-comprehension
  "RET506", # superfluous-else-raise
  "RET507", # superfluous-else-continue
  "A",      # builtin-variable-shadowing
  "SIM105", # suppressible-exception
  "FURB110" # if-exp-instead-of-or-operator
]
fixable = ["ALL"]
unfixable = ["F401"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "auto"

exclude = [
  "configs/",
  "docs/",
  "notebooks/",
  "reports/",
]